FIX: Correct height on sections to cover white spaces.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -505,7 +505,7 @@ footer {
     #who-timestable {
         display: flex;
         flex-direction: column;
-        height: 95.7vh;
+        height: 103vh;
         width: 50%;
         margin-top: 29px;
 
